--- a/WindOS.ioc
+++ b/WindOS.ioc
@@ -2,35 +2,78 @@
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
+FSMC.DataSetupTime1=60
+FSMC.ExtendedAddressSetupTime1=8
+FSMC.ExtendedDataSetupTime1=9
+FSMC.ExtendedMode1=FSMC_EXTENDED_MODE_ENABLE
+FSMC.IPParameters=WriteOperation1,ExtendedMode1,DataSetupTime1,ExtendedDataSetupTime1,ExtendedAddressSetupTime1
+FSMC.WriteOperation1=FSMC_WRITE_OPERATION_ENABLE
 File.Version=6
 GPIO.groupedBy=Show All
 KeepUserPlacement=false
 Mcu.CPN=STM32F407ZGT6
 Mcu.Family=STM32F4
-Mcu.IP0=NVIC
-Mcu.IP1=RCC
-Mcu.IP2=SYS
-Mcu.IP3=TIM6
-Mcu.IP4=USART1
-Mcu.IPNb=5
+Mcu.IP0=FSMC
+Mcu.IP1=NVIC
+Mcu.IP2=RCC
+Mcu.IP3=SYS
+Mcu.IP4=TIM6
+Mcu.IP5=USART1
+Mcu.IPNb=6
 Mcu.Name=STM32F407Z(E-G)Tx
 Mcu.Package=LQFP144
 Mcu.Pin0=PE2
 Mcu.Pin1=PE3
-Mcu.Pin10=PA10
-Mcu.Pin11=PA13
-Mcu.Pin12=PA14
-Mcu.Pin13=VP_SYS_VS_Systick
-Mcu.Pin14=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin10=PF5
+Mcu.Pin11=PF9
+Mcu.Pin12=PF10
+Mcu.Pin13=PH0-OSC_IN
+Mcu.Pin14=PH1-OSC_OUT
+Mcu.Pin15=PF12
+Mcu.Pin16=PF13
+Mcu.Pin17=PF14
+Mcu.Pin18=PF15
+Mcu.Pin19=PG0
 Mcu.Pin2=PE4
+Mcu.Pin20=PG1
+Mcu.Pin21=PE7
+Mcu.Pin22=PE8
+Mcu.Pin23=PE9
+Mcu.Pin24=PE10
+Mcu.Pin25=PE11
+Mcu.Pin26=PE12
+Mcu.Pin27=PE13
+Mcu.Pin28=PE14
+Mcu.Pin29=PE15
 Mcu.Pin3=PC14-OSC32_IN
+Mcu.Pin30=PB15
+Mcu.Pin31=PD8
+Mcu.Pin32=PD9
+Mcu.Pin33=PD10
+Mcu.Pin34=PD14
+Mcu.Pin35=PD15
+Mcu.Pin36=PG2
+Mcu.Pin37=PG3
+Mcu.Pin38=PG4
+Mcu.Pin39=PG5
 Mcu.Pin4=PC15-OSC32_OUT
-Mcu.Pin5=PF9
-Mcu.Pin6=PF10
-Mcu.Pin7=PH0-OSC_IN
-Mcu.Pin8=PH1-OSC_OUT
-Mcu.Pin9=PA9
-Mcu.PinsNb=15
+Mcu.Pin40=PA9
+Mcu.Pin41=PA10
+Mcu.Pin42=PA13
+Mcu.Pin43=PA14
+Mcu.Pin44=PD0
+Mcu.Pin45=PD1
+Mcu.Pin46=PD4
+Mcu.Pin47=PD5
+Mcu.Pin48=PG12
+Mcu.Pin49=VP_SYS_VS_Systick
+Mcu.Pin5=PF0
+Mcu.Pin50=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin6=PF1
+Mcu.Pin7=PF2
+Mcu.Pin8=PF3
+Mcu.Pin9=PF4
+Mcu.PinsNb=51
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407ZGTx
@@ -57,10 +100,29 @@ PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
+PB15.GPIOParameters=GPIO_Label
+PB15.GPIO_Label=LCD_BL
+PB15.Locked=true
+PB15.Signal=GPIO_Output
 PC14-OSC32_IN.Mode=LSE-External-Oscillator
 PC14-OSC32_IN.Signal=RCC_OSC32_IN
 PC15-OSC32_OUT.Mode=LSE-External-Oscillator
 PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
+PD0.Signal=FSMC_D2_DA2
+PD1.Signal=FSMC_D3_DA3
+PD10.Signal=FSMC_D15_DA15
+PD14.Signal=FSMC_D0_DA0
+PD15.Signal=FSMC_D1_DA1
+PD4.Signal=FSMC_NOE
+PD5.Signal=FSMC_NWE
+PD8.Signal=FSMC_D13_DA13
+PD9.Signal=FSMC_D14_DA14
+PE10.Signal=FSMC_D7_DA7
+PE11.Signal=FSMC_D8_DA8
+PE12.Signal=FSMC_D9_DA9
+PE13.Signal=FSMC_D10_DA10
+PE14.Signal=FSMC_D11_DA11
+PE15.Signal=FSMC_D12_DA12
 PE2.GPIOParameters=GPIO_PuPd,GPIO_Label
 PE2.GPIO_Label=KEY2
 PE2.GPIO_PuPd=GPIO_PULLUP
@@ -76,16 +138,37 @@ PE4.GPIO_Label=KEY0
 PE4.GPIO_PuPd=GPIO_PULLUP
 PE4.Locked=true
 PE4.Signal=GPIO_Input
+PE7.Signal=FSMC_D4_DA4
+PE8.Signal=FSMC_D5_DA5
+PE9.Signal=FSMC_D6_DA6
+PF0.Signal=FSMC_A0
+PF1.Signal=FSMC_A1
 PF10.GPIOParameters=PinState,GPIO_Label
 PF10.GPIO_Label=LED1
 PF10.Locked=true
 PF10.PinState=GPIO_PIN_SET
 PF10.Signal=GPIO_Output
+PF12.Signal=FSMC_A6
+PF13.Signal=FSMC_A7
+PF14.Signal=FSMC_A8
+PF15.Signal=FSMC_A9
+PF2.Signal=FSMC_A2
+PF3.Signal=FSMC_A3
+PF4.Signal=FSMC_A4
+PF5.Signal=FSMC_A5
 PF9.GPIOParameters=PinState,GPIO_Label
 PF9.GPIO_Label=LED0
 PF9.Locked=true
 PF9.PinState=GPIO_PIN_SET
 PF9.Signal=GPIO_Output
+PG0.Signal=FSMC_A10
+PG1.Signal=FSMC_A11
+PG12.Mode=NorPsramChipSelect4_1
+PG12.Signal=FSMC_NE4
+PG2.Signal=FSMC_A12
+PG3.Signal=FSMC_A13
+PG4.Signal=FSMC_A14
+PG5.Signal=FSMC_A15
 PH0-OSC_IN.Mode=HSE-External-Oscillator
 PH0-OSC_IN.Signal=RCC_OSC_IN
 PH1-OSC_OUT.Mode=HSE-External-Oscillator
@@ -122,7 +205,7 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART1_UART_Init-USART1-false-HAL-true,4-MX_TIM6_Init-TIM6-false-HAL-true
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_USART1_UART_Init-USART1-false-HAL-true,4-MX_TIM6_Init-TIM6-false-HAL-true,5-MX_FSMC_Init-FSMC-false-HAL-true
 RCC.48MHZClocksFreq_Value=84000000
 RCC.AHBFreq_Value=168000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
@@ -155,6 +238,74 @@ RCC.VCOI2SOutputFreq_Value=384000000
 RCC.VCOInputFreq_Value=2000000
 RCC.VCOOutputFreq_Value=336000000
 RCC.VcooutputI2S=192000000
+SH.FSMC_A0.0=FSMC_A0,16b-a1
+SH.FSMC_A0.ConfNb=1
+SH.FSMC_A1.0=FSMC_A1,16b-a1
+SH.FSMC_A1.ConfNb=1
+SH.FSMC_A10.0=FSMC_A10,16b-a1
+SH.FSMC_A10.ConfNb=1
+SH.FSMC_A11.0=FSMC_A11,16b-a1
+SH.FSMC_A11.ConfNb=1
+SH.FSMC_A12.0=FSMC_A12,16b-a1
+SH.FSMC_A12.ConfNb=1
+SH.FSMC_A13.0=FSMC_A13,16b-a1
+SH.FSMC_A13.ConfNb=1
+SH.FSMC_A14.0=FSMC_A14,16b-a1
+SH.FSMC_A14.ConfNb=1
+SH.FSMC_A15.0=FSMC_A15,16b-a1
+SH.FSMC_A15.ConfNb=1
+SH.FSMC_A2.0=FSMC_A2,16b-a1
+SH.FSMC_A2.ConfNb=1
+SH.FSMC_A3.0=FSMC_A3,16b-a1
+SH.FSMC_A3.ConfNb=1
+SH.FSMC_A4.0=FSMC_A4,16b-a1
+SH.FSMC_A4.ConfNb=1
+SH.FSMC_A5.0=FSMC_A5,16b-a1
+SH.FSMC_A5.ConfNb=1
+SH.FSMC_A6.0=FSMC_A6,16b-a1
+SH.FSMC_A6.ConfNb=1
+SH.FSMC_A7.0=FSMC_A7,16b-a1
+SH.FSMC_A7.ConfNb=1
+SH.FSMC_A8.0=FSMC_A8,16b-a1
+SH.FSMC_A8.ConfNb=1
+SH.FSMC_A9.0=FSMC_A9,16b-a1
+SH.FSMC_A9.ConfNb=1
+SH.FSMC_D0_DA0.0=FSMC_D0,16b-d1
+SH.FSMC_D0_DA0.ConfNb=1
+SH.FSMC_D10_DA10.0=FSMC_D10,16b-d1
+SH.FSMC_D10_DA10.ConfNb=1
+SH.FSMC_D11_DA11.0=FSMC_D11,16b-d1
+SH.FSMC_D11_DA11.ConfNb=1
+SH.FSMC_D12_DA12.0=FSMC_D12,16b-d1
+SH.FSMC_D12_DA12.ConfNb=1
+SH.FSMC_D13_DA13.0=FSMC_D13,16b-d1
+SH.FSMC_D13_DA13.ConfNb=1
+SH.FSMC_D14_DA14.0=FSMC_D14,16b-d1
+SH.FSMC_D14_DA14.ConfNb=1
+SH.FSMC_D15_DA15.0=FSMC_D15,16b-d1
+SH.FSMC_D15_DA15.ConfNb=1
+SH.FSMC_D1_DA1.0=FSMC_D1,16b-d1
+SH.FSMC_D1_DA1.ConfNb=1
+SH.FSMC_D2_DA2.0=FSMC_D2,16b-d1
+SH.FSMC_D2_DA2.ConfNb=1
+SH.FSMC_D3_DA3.0=FSMC_D3,16b-d1
+SH.FSMC_D3_DA3.ConfNb=1
+SH.FSMC_D4_DA4.0=FSMC_D4,16b-d1
+SH.FSMC_D4_DA4.ConfNb=1
+SH.FSMC_D5_DA5.0=FSMC_D5,16b-d1
+SH.FSMC_D5_DA5.ConfNb=1
+SH.FSMC_D6_DA6.0=FSMC_D6,16b-d1
+SH.FSMC_D6_DA6.ConfNb=1
+SH.FSMC_D7_DA7.0=FSMC_D7,16b-d1
+SH.FSMC_D7_DA7.ConfNb=1
+SH.FSMC_D8_DA8.0=FSMC_D8,16b-d1
+SH.FSMC_D8_DA8.ConfNb=1
+SH.FSMC_D9_DA9.0=FSMC_D9,16b-d1
+SH.FSMC_D9_DA9.ConfNb=1
+SH.FSMC_NOE.0=FSMC_NOE,Sram1
+SH.FSMC_NOE.ConfNb=1
+SH.FSMC_NWE.0=FSMC_NWE,Sram1
+SH.FSMC_NWE.ConfNb=1
 TIM6.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
 TIM6.IPParameters=AutoReloadPreload,TIM_MasterOutputTrigger,Prescaler,Period
 TIM6.Period=39
