IIC EEPROM support, fine LCD display

--- a/WindOS.ioc
+++ b/WindOS.ioc
@@ -66,14 +66,16 @@ Mcu.Pin45=PD1
 Mcu.Pin46=PD4
 Mcu.Pin47=PD5
 Mcu.Pin48=PG12
-Mcu.Pin49=VP_SYS_VS_Systick
+Mcu.Pin49=PB8
 Mcu.Pin5=PF0
-Mcu.Pin50=VP_TIM6_VS_ClockSourceINT
+Mcu.Pin50=PB9
+Mcu.Pin51=VP_SYS_VS_Systick
+Mcu.Pin52=VP_TIM6_VS_ClockSourceINT
 Mcu.Pin6=PF1
 Mcu.Pin7=PF2
 Mcu.Pin8=PF3
 Mcu.Pin9=PF4
-Mcu.PinsNb=51
+Mcu.PinsNb=53
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F407ZGTx
@@ -104,6 +106,21 @@ PB15.GPIOParameters=GPIO_Label
 PB15.GPIO_Label=LCD_BL
 PB15.Locked=true
 PB15.Signal=GPIO_Output
+PB8.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
+PB8.GPIO_Label=IIC_SCL
+PB8.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
+PB8.GPIO_PuPd=GPIO_NOPULL
+PB8.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
+PB8.Locked=true
+PB8.Signal=GPIO_Output
+PB9.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
+PB9.GPIO_Label=IIC_SDA
+PB9.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_OD
+PB9.GPIO_PuPd=GPIO_NOPULL
+PB9.GPIO_Speed=GPIO_SPEED_FREQ_VERY_HIGH
+PB9.Locked=true
+PB9.PinState=GPIO_PIN_RESET
+PB9.Signal=GPIO_Output
 PC14-OSC32_IN.Mode=LSE-External-Oscillator
 PC14-OSC32_IN.Signal=RCC_OSC32_IN
 PC15-OSC32_OUT.Mode=LSE-External-Oscillator
